<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Photo of the day</string>
    <string name="widget_name_dark">Photo of the day - dark</string>
    <string name="wallpaper_description">Live wallpaper that displays photo of the day from Flickr and Fotki.Yandex</string>
    <string name="download">Download image…</string>
    <string name="error">Error!</string>
    <string name="isOffline">Data communication off</string>
    <string name="isOutOfMemory1">Memory full,</string>
    <string name="isOutOfMemory2">please close some apps :(</string>
    <string name="sources">Sources of wallpaper</string>
    <string name="sourcesSummary">Select one of several sources wallpaper</string>
    <string name="tagPhotoEnable">Enable tags</string>
    <string name="tagPhotoEnableSummary">Enable tags. Flickr and Yandex only.</string>
    <string name="tagPhotoValue">Tag</string>
    <string name="tagPhotoValueSummary">Set up tag</string>
    <string name="downloadEveryUpdate">Download periodically</string>
    <string name="downloadEveryUpdateSummary">For tags mode only. Download image every hour.</string>
    <string name="autoChangeSource">Source auto change</string>
    <string name="autoChangeSourceSummary">Source auto change every hour</string>
    <string name="wifiOnly">Download Wi-Fi only</string>
    <string name="wifiOnlySummary">Download Wi-Fi only</string>
    <string name="sourcesSettings">Sources settings</string>
    <string name="networkSettings">Network settings</string>
    <string name="install_widget">Images can be saved using the widget Photo of the day</string>
    <!-- о программе -->
    <string name="catAbout">About</string>
    <string name="howToUse">How to use</string>
    <string name="howToUseDescr">Details about the app</string>
    <string name="whatsNew">What\'s new?</string>
    <string name="softwareVersion">Software version</string>
    <string name="updateStarted">Download image started</string>
    <string name="setupDescription">"Choose 'Photo of the day'\r\n from the list."</string>
    <!-- ============================ -->
    <!--  AppWidget strings           -->
    <!-- ============================ -->
    <string name="errorSaveFileToSD">Error writing data to SD card</string>
    <string name="saveFileToSD">Image has been saved</string>
    <string name="button_back">Back</string>
    <string name="button_done">OK</string>
    <string name="installWallpaper">"Images are downloaded and updated automatically every day from resource  (website) you choose in settings. Run live wallpaper 'Photo of the day' and enjoy the best photos of the world on your device desktop."</string>
    <string name="installSettings">Settings</string>
    <string name="installStart">Start</string>
    <string name="installAbout">About</string>
    <string name="assets_html_folder">html/</string>
    <string name="galleryWelcomeText">"Here will be saved images you like. You can save images by widget 'Photo of the day'. Now go to home screen and enjoy picture."</string>
    <string name="catSrolling">Scrolling</string>
    <string name="programScrolingPref">Alternative scrolling (beta)</string>
    <string name="disableScrolingPref">Disable scrolling wallpaper</string>
    <string name="disableScrolingPrefSummary">Static image on homescreen</string>
    <string name="programScrolingPrefSummary">"Beta funcionality! Use to enable scrolling wallpapers, when you scroll homescreens (If this functionality doesn't work in Android platform)"</string>
    <string name="scrollingEffect">Border mode</string>
    <string name="scrollingEffectSummary">Graphical scrolling effect on border</string>
    <string name="effectJump">Jump back</string>
    <string name="effectSpring">Spring</string>
    <string name="numVirtualScreensSummary">Virtual screens count</string>
    <string name="numVirtualScreens">Virtual screens</string>
    <string name="nullString"/>
    <string name="openGallery">Open gallery</string>
    <string name="saveImage">Save image</string>
    <string name="nextParser">Next parser</string>
    <string name="openSettings">Open settings</string>
    <string name="favoriteSources">Favorite sources</string>
    <string name="favoriteSourcesSummary">Select sources for source auto change mode</string>
    <string name="wideWidthPref">Landscape scrolling</string>
    <string name="wideWidthPrefSummary">Set to activate scrolling on landscape orientation (only tablet)</string>
    <string name="loadFromSDPrefSummary">Load image from gallery when network is not accessible (for source auto change and widget button)</string>
    <string name="loadFromSDPref">Images from gallery</string>
</resources>
