<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  	<PreferenceCategory android:title="@string/catAbout">
		<Preference android:title="@string/howToUse"
            android:summary="@string/howToUseDescr"
            android:key="howToUsePref" />
		<Preference android:title="@string/whatsNew"
            android:summary="@string/softwareVersion"
            android:key="softwareVersionPref" />
	</PreferenceCategory>
  	<PreferenceCategory android:title="@string/sourcesSettings">
       <ListPreference android:key="sources" 
       		android:title="@string/sources" 
       		android:summary="@string/sourcesSummary" 
       		android:entries="@array/sourcesArray" 
       		android:entryValues="@array/sourcesValues"
       		android:defaultValue="1">
       </ListPreference>
       <CheckBoxPreference android:key="autoChangeSource" 
       		android:summary="@string/autoChangeSourceSummary" 
       		android:title="@string/autoChangeSource"
       		android:disableDependentsState="True">
       </CheckBoxPreference>
       <CheckBoxPreference android:key="tagPhotoEnable" 
       		android:summary="@string/tagPhotoEnableSummary" 
       		android:title="@string/tagPhotoEnable"
       		android:dependency="autoChangeSource">
       </CheckBoxPreference>
       <EditTextPreference android:key="tagPhotoValue" 
       		android:title="@string/tagPhotoValue" 
       		android:summary="@string/tagPhotoValueSummary" 
       		android:dependency="tagPhotoEnable">
       </EditTextPreference>
       <CheckBoxPreference android:key="downloadEveryUpdate"
       		android:dependency="tagPhotoEnable" android:summary="@string/downloadEveryUpdateSummary" android:title="@string/downloadEveryUpdate">
       </CheckBoxPreference>
    </PreferenceCategory>
  	<PreferenceCategory android:title="@string/catSrolling">
		<CheckBoxPreference android:key="disableScrolingPref"
		    android:title="@string/disableScrolingPref"
            android:summary="@string/disableScrolingPrefSummary"
            android:disableDependentsState="True">
		</CheckBoxPreference>
		<CheckBoxPreference android:title="@string/programScrolingPref"
            android:summary="@string/programScrolingPrefSummary"
            android:key="programScrolingPref"
            android:dependency="disableScrolingPref">
       </CheckBoxPreference>
       <ListPreference android:key="scrollingEffect" 
       		android:title="@string/scrollingEffect" 
       		android:summary="@string/scrollingEffectSummary" 
       		android:entries="@array/scrollingEffectArray" 
       		android:entryValues="@array/scrollingEffectValues"
       		android:defaultValue="1"
       		android:dependency="programScrolingPref">
       </ListPreference>
       <EditTextPreference
			android:key="numVirtualScreens"
			android:title="@string/numVirtualScreens"
       		android:summary="@string/numVirtualScreensSummary"            
			android:numeric="integer"
			android:maxLength="2"
			android:defaultValue="7"
			android:dependency="programScrolingPref"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/networkSettings">
		<CheckBoxPreference android:key="wifiOnly" 
			android:summary="@string/wifiOnlySummary" android:title="@string/wifiOnly">
		</CheckBoxPreference>
	</PreferenceCategory>    
</PreferenceScreen>
