<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

	<TextView
	    android:id="@+id/tv_install_widget"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:ellipsize="end"
	    android:maxLines="10"
	    android:padding="5dp"
	    android:text="@string/installWallpaper"
	    android:textAppearance="?android:attr/textAppearanceSmall"
	    style="@style/GalleryIncludeText" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<Button
		    android:id="@+id/installSettingsButton"
		    android:layout_width="0dp"
		    android:layout_weight="0.5"
		    android:layout_height="wrap_content"
			android:gravity="center"		    
	        android:text="@string/installSettings"
		    android:contentDescription="@string/installSettings"
		    android:drawableLeft="@drawable/ic_widget_settings_dark" />

	    <Button
		    android:id="@+id/installStartButton"
		    android:layout_width="0dp"
		    android:layout_weight="0.5"
		    android:layout_height="wrap_content"
		    android:gravity="center"		    
	        android:text="@string/installStart"
	        android:contentDescription="@string/installStart"
		    android:drawableLeft="@drawable/ic_gallery_run_wallpaper" />
	    
	</LinearLayout>

	<View
	    android:id="@+id/view1"
	    android:layout_width="wrap_content"
	    android:layout_height="1dp"
	    android:layout_marginBottom="4dp"
	    android:background="#0099CC" />

</LinearLayout>
